# buckos-build

./: .buckconfig  .gitignore  BUCK  INSTALL.bzl  MIGRATION-STATUS.md  Makefile  PACKAGE  README.md  README.md.old  SIGNATURE_VERIFICATION.md  SPEC.md  build_results.md  pyproject.toml  setup.sh  test-seed-local.sh
config/: BUCK  fedora_build_flags.bzl  use_config.bzl
defs/: BUCK  CROSS_LANGUAGE_USE_FLAGS.md  advanced_deps.bzl  arch.bzl  config_protect.bzl  distro_constraints.bzl  eapi.bzl  eclasses.bzl  empty_registry.bzl  fhs_mapping.bzl  integration.bzl  licenses.bzl  maintainers.bzl  overlays.bzl  package.bzl  package_customize.bzl  package_defs.bzl  package_sets.bzl  platform_defs.bzl  providers.bzl  qemu.bzl  registry.bzl  rpm_package.bzl  toolchain_helpers.bzl  tooling.bzl  tsets.bzl  use_expand.bzl  use_flags.bzl  use_helpers.bzl  vdb.bzl  vendor_sources.bxl  versions.bzl
docs/: KERNEL.md  binary-packages.md  bootstrap-3stage-implementation.md  fedora-compatibility.md  gentoo-comparison.md
infra/: README.md  docker-compose.yml
patches/: registry.bzl
scripts/: BUCK  QUICK-START.md  README-download-tools.md  download-all-sources.py  export-toolchain.sh  generate-download-script.py  generate-spec-index.py  install-binary.py  package-binary.py  query-binary-package.py  upload-binaries.py  validate-spec.py  verify-mirror.py
scripts/package-binary-rs/: Cargo.toml
scripts/package-binary-rs/src/: main.rs
specs/: BUCK  INDEX.md  README.md  REGISTRY.json  TEMPLATE.md
tc/: defs.bzl  toolchain_rules.bzl  transitions.bzl
tests/: BUCK  buck_parser.py  (+36 more)
(+194 files in other folders)
