[project]
name = "buckos-tests"
version = "0.0.1"
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest>=8", "pytest-timeout>=2.2", "pytest-xdist>=3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
markers = [
    "slow: tests that boot QEMU or build kernels (deselect with '-m not slow')",
    "integration: tests that need KVM and build full stack",
]
