[package]
name = "package-binary"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
walkdir = "2.4"
regex = "1.10"

[[bin]]
name = "package-binary"
path = "src/main.rs"
